--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li class='navbarlist' id='d'><img src=carbon_bookmark.png>Bookmarks</li>
                 <li class='navbarlist' id='c'><img src='fluent_document-bullet-list-20-regular.png'>Topics</li>
                 <li class='navbarlist' id='e'><img src='1.png'>Profile</li>
-                <li class='navbarlist' id='f'><img src='ph_archive-box.png'>Archieve</li>
+                <li class='navbarlist' id='f'><img src='ph_archive-box.png'>Archive</li>
                 <li class='navbarlist' id='g'><img src='ep_more.png'><button type='button'>More</button></li>
             </ul>
         </div>
@@ -34,11 +34,12 @@
         <div id="insidehome">
             <img src="healthicons_ui-user-profile.png">
             <input type='text' placeholder=" What's on your mind?" style="margin-top:-35px; display:block;margin-left:50px;">
-            <img src="Group 15.png" style="display:block; margin-left:35px;margin-top:30px; ">
+            <button><img src="Group 15.png" style="display:block; margin-left:35px;margin-top:30px; "></button>
             <button style="background: #116530;
-            border-radius: 8px;color:white;height:30;width:106;margin-left:570px;margin-top:-26px;"> Post</button>
+            border-radius: 8px;color:white;height:30;width:106;margin-left:350px;margin-top:-26px;"> Post</button>
         </div>
     </div>
+    <div id="line5"></div>
     <div class="vlog">
         <p style="font-family: 'Helvetica';
         font-style: normal;
@@ -57,19 +58,12 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
         <div>
             <img src="image 3.png">
-            <img src="image 4.png" style="width:500px;margin-top:10px;margin-left:25px">
+            <button><img src="image 4.png" style="width:500px;margin-top:10px;margin-left:25px"></button>
         </div>
         <div id="line3"></div>
 
 
-    </div>
-    <div id="line4" style='position: absolute;
-    width: 732px;
-    height: 0px;
-    left: 332px;
-    top: 619px;
-    
-    border: 1px solid #E7D9D9;'>
+
 
     </div>
     <div class="vlog">
@@ -84,7 +78,7 @@
         color: #6C6B6B;margin-top:10px"><img src="1.png" style='height: 20px;
     width: 15px;'>Administration</p>
         <button type='button'><img src=""></button>
-        <img src="image 3 (1).png" style="width: 30.76px;
+        <img src="healthicons_ui-user-profile.png" style="width: 30.76px;
         height: 25.52px;border-radius: 100%;">
         <h3 style="display:inline">Anonymous</h3>
         <img src="">
@@ -100,6 +94,34 @@
     <div id="line2">
 
     </div>
+    <div id="line4"></div>
+
+    <div class="vlog">
+        <p style="font-family: 'Helvetica';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        /* identical to box height */
+        margin-top:-20px;
+        
+        color: #6C6B6B;margin-top:40px;"><img src="1.png" style='height: 20px;
+    width: 15px;'>Sustainibility</p>
+        <img src="healthicons_ui-user-profile.png" style="width: 30.76px;
+        height: 25.52px;border-radius: 100%;">
+        <h3 style="display:inline">Anonymous</h3>
+        <button type='button'><img src=""></button>
+
+        <div>
+            <img src="image 6.png" style="width:i573px;height:247px;">
+            <button><img src="image 4.png" style="width:500px;margin-top:10px;margin-left:25px"></button>
+        </div>
+        <div id="line3"></div>
+
+
+
+
+    </div>
     <div id="last">
         <div id="search">
             <img src="Rectangle 2.png" style="height:15px;width:15px">
@@ -109,10 +131,10 @@
             <h3 style='padding:10px;'>NOTICE BOARD</h3>
             <p style="color:#6C6B6B;padding-left:10px">TLDR; OUT!!</p>
 
-            <p style="padding-left:5px;font-size:16px;" ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            <p style="padding-left:5px;font-size:16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
             <button type="button "><img src=''></button>
             <p style="color:#6C6B6B;padding-left:10px ">Course Registration Deadline</p>
-            <p style="padding-left:5px;font-size:16px; "">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+            <p style="padding-left:5px;font-size:16px; ">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
             <button type="button"><img src=''></button>
             <p style="color:#6C6B6B;padding-left:10px">New IG Post on BSP!</p>
             <p style="padding-left:5px;font-size:16px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
